Fix column layout on small devices. Add missing scss for forms.

--- a/assets/css/scss/_global_overrides.scss
+++ b/assets/css/scss/_global_overrides.scss
@@ -103,5 +103,10 @@ body.search-results main {
   }
 }
 
+.gform_wrapper .gform_footer input.button {
+  background: $msva-green;
+  color: white;
+}
+
 
 
